<resources>
    <string name="app_name">First App</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="one_box">One Box</string>

    <string name="keep">Keep</string>
    <string name="video_photo">Videos and Photos</string>

    <string name="feed_back">Send Feedback</string>
    <string name="help">Helps Center</string>
    <string name="block">Blocked</string>
    <string name="li_cen">Open Source Licenses</string>
    <string name="sign_out">Sign out of One Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
