<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolBar"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    app:titleTextColor="@color/colorWhite"
    android:layout_height="?attr/actionBarSize"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/cancel_request_copy_4"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/edit_profile"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cloud Storage"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/one_box_logo"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/one_box"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Chat"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/keep"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/keep"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/video_and_photos_ver_2"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/video_photo"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="General"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/star"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/feed_back"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/help_center"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/help"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/blocked"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/block"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/file"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/li_cen"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/sign_out_ver_2"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/sign_out"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="@color/colorGray"
            android:src="@drawable/ic_btn_action_next_24dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Version 2.8.5"
        android:gravity="center"/>


</LinearLayout>
</ScrollView>